--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div style="display: flex; justify-content: center;">
             <div style=" margin-bottom: 10px; ">
                 <button id="pencil"><img src="pencil.png" alt="" width="30" height="30" style="margin: 10px;"></button>
-                <button id="eraser"><img src="eraser.png" alt="" width="30" height="30" style="margin: 10px;"></button>                
+                <button id="eraser" style=" margin-right: 30px;"><img src="eraser.png" alt="" width="30" height="30" style="margin: 10px;"></button>                
             </div>
             
             <canvas id="myCanvas" width="700" height="400" style="border: solid grey 0.1cm;">
