Se comenzaron a agregar cosas sobre agregar imagen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div>
                 <button style="margin-right: 30px; margin-left: 5px; padding: 15px 5px;"><input type="color"  id="paleta"></button>
             </div>
+
+            <input type="file" name="image" id="image">
+            
             
             <canvas id="myCanvas" width="700" height="400" style="border: solid grey 0.1cm;">
 
@@ -32,6 +35,7 @@
         </div>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/uploadImage.js"></script>
 
 
 </body>
