color palette added

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
     <div style="margin-top: 30px;">
         <div style="display: flex; justify-content: center;">
-            <div style=" margin-bottom: 10px; ">
+            <div style="margin-bottom: 10px; ">
                 <button id="pencil"><img src="pencil.png" alt="" width="30" height="30" style="margin: 10px;"></button>
-                <button id="eraser" style=" margin-right: 30px;"><img src="eraser.png" alt="" width="30" height="30" style="margin: 10px;"></button>                
+                <button id="eraser"><img src="eraser.png" alt="" width="30" height="30" style="margin: 10px;"></button>                
+            </div>
+            <div>
+                <button style="margin-right: 30px; margin-left: 5px; padding: 15px 5px;"><input type="color"  id="paleta"></button>
             </div>
             
             <canvas id="myCanvas" width="700" height="400" style="border: solid grey 0.1cm;">
