Se agregan filtro sepia y binarizacion(?

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </canvas>
         </div>
         <div style="text-align:center; margin-top: 20px;">
-            <button id="filter1">Filtro 1</button>
-            <button id="filter2">Filtro 2</button>
+            <button id="filterSepia">Filtro Sepia</button>
+            <button id="filterBina">Filtro Binarizacion</button>
             <button id="filter3">Filtro 3</button>
             <button id="filter4">Filtro 4</button>
             <button id="filter5">Filtro 5</button>
