Agregamos filtros y clearCanvas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <div style="display: flex; justify-content: center;">
             <div style="margin-bottom: 10px; ">
                 <button id="pencil"><img src="pencil.png" alt="" width="30" height="30" style="margin: 10px;"></button>
-                <button id="eraser"><img src="eraser.png" alt="" width="30" height="30" style="margin: 10px;"></button>                
+                <button id="eraser"><img src="eraser.png" alt="" width="30" height="30" style="margin: 10px;"></button>  
+                <button id="clearCanvas">Restaurar</button>  
+                <button id="downloadImage">Descargar</button>              
             </div>
             <div>
                 <button style="margin-right: 30px; margin-left: 5px; padding: 15px 5px;"><input type="color"  id="paleta"></button>
@@ -27,8 +29,8 @@
         <div style="text-align:center; margin-top: 20px;">
             <button id="filterSepia">Filtro Sepia</button>
             <button id="filterBina">Filtro Binarizacion</button>
-            <button id="filter3">Filtro 3</button>
-            <button id="filter4">Filtro 4</button>
+            <button id="filterGrey">Filtro Gris</button>
+            <button id="filterNegative">Filtro negativo</button>
             <button id="filter5">Filtro 5</button>
             <button id="filter6">Filtro 6</button>
 
