--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button id="filterBina">Filtro Binarizacion</button>
             <button id="filterGrey">Filtro Gris</button>
             <button id="filterNegative">Filtro negativo</button>
-            <button id="filter5">Filtro 5</button>
+            <button id="filterBlur">Filtro Blur</button>
             <button id="filter6">Filtro 6</button>
 
         </div>
