se agrego filtro difuminado y parcial saturacion

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <input type="file" name="image" id="image">
             
             
-            <canvas id="myCanvas" width="1000" height="700" style="border: solid grey 0.1cm;">
+            <canvas id="myCanvas" width="700" height="500" style="border: solid grey 0.1cm;">
 
             </canvas>
         </div>
         <div style="text-align:center; margin-top: 20px;">
-            <button id="filterSepia">Filtro Sepia</button>
-            <button id="filterBina">Filtro Binarizacion</button>
-            <button id="filterGrey">Filtro Gris</button>
-            <button id="filterNegative">Filtro negativo</button>
-            <button id="filterBlur">Filtro Blur</button>
-            <button id="filter6">Filtro 6</button>
+            <button id="filterSepia">Sepia</button>
+            <button id="filterBina">Binarizacion</button>
+            <button id="filterGrey">Grises</button>
+            <button id="filterNegative">Negativo</button>
+            <button id="filterBlur">Blur</button>
+            <button id="filterSaturation">Saturacion</button>
 
         </div>
     </div>
